--- a/assets/scss/_section1.scss
+++ b/assets/scss/_section1.scss
@@ -91,7 +91,7 @@
             .ic {
                 width: 100%;
                 height: 100%;
-                background-image: url("/assets/img/h-2-rev-img-2.jpg");
+                background-image: url("../img/h-2-rev-img-2.jpg");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -176,7 +176,7 @@
                     .mode {
                         width: 70%;
                         height: 80%;
-                        background-image: url("/assets/img/h2-rev-img2.jpg");
+                        background-image: url("../img/h2-rev-img2.jpg");
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: cover;
@@ -199,7 +199,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-image: url("/assets/img/fs-menu-bg-img.jpg");
+    background-image: url("../img/fs-menu-bg-img.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
